848
Oh, I see. I was testing my code with the scalac (2.7.1-final) compiler and it does not accept the workaround, which was the confusing thing here. Now I realise that this is due to some change in {{scalac}} that is not yet present in the eclipse plugin.  

{code}
client\FooApp.scala:5: error: object creation impossible, since method exec in t
rait Foo of type (java.lang.String,Array[java.lang.Object])Unit is not defined
  val foo = new Foo {
            ^
client\FooApp.scala:6: error: method exec overrides nothing
    override def exec(name:java.lang.String, objects:AnyRef*) {
                 ^
two errors found

{code}
